# hello-cmake

./: .gitignore  CMakeLists.txt  main.cpp
include/: Hello.h
source/: Hello.cpp
